namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kiali.io/member-of: istio-system
  name: bookinfo
