traffic-generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trafficgenerator
  name: trafficgenerator
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: trafficgenerator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: trafficgenerator
    spec:
      containers:
      - args:
        - /bin/sh
        - -c
        - while true; do curl bookinfo-arm-demo.cx.tetrate.info/productpage; sleep 10; done
        image: curlimages/curl:7.84.0
        imagePullPolicy: Always
        name: trafficgenerator
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
