bookinfo-ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bookinfo-arm-demo.cx.tetrate.info"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - "bookinfo-arm-demo.cx.tetrate.info"
  http:
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
