reviews-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: reviews
    version: v1
  name: reviews-v1
  namespace: bookinfo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reviews
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:

      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - env:
        - name: LOG_DIR
          value: /tmp/logs
        image: docker.io/istio/examples-bookinfo-reviews-v1:1.16.4
        imagePullPolicy: IfNotPresent
        name: reviews
        ports:
        - containerPort: 9080
          protocol: TCP
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /opt/ibm/wlp/output
          name: wlp-output
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: bookinfo-reviews
      serviceAccountName: bookinfo-reviews
      terminationGracePeriodSeconds: 30
      volumes:
      - name: wlp-output
      - name: tmp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    app: reviews
    version: v2
  name: reviews-v2
  namespace: bookinfo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reviews
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: reviews
        version: v2
    spec:
      containers:
      - env:
        - name: LOG_DIR
          value: /tmp/logs
        - name: RATINGS_HOSTNAME
          value: ratings-arm-demo.cx.tetrate.info
        image: mcallisterpetr/reviews-v2
        imagePullPolicy: IfNotPresent
        name: reviews
        ports:
        - containerPort: 9080
          protocol: TCP
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /opt/ibm/wlp/output
          name: wlp-output
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: bookinfo-reviews
      serviceAccountName: bookinfo-reviews
      terminationGracePeriodSeconds: 30
      volumes:
      - name: wlp-output
      - name: tmp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    app: reviews
    version: v3
  name: reviews-v3
  namespace: bookinfo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reviews
      version: v3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:

      labels:
        app: reviews
        version: v3
    spec:
      containers:
      - env:
        - name: LOG_DIR
          value: /tmp/logs
        - name: RATINGS_HOSTNAME
          value: ratings-arm-demo.cx.tetrate.info
        image: mcallisterpetr/reviews-v3
        imagePullPolicy: IfNotPresent
        name: reviews
        ports:
        - containerPort: 9080
          protocol: TCP
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /opt/ibm/wlp/output
          name: wlp-output
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: bookinfo-reviews
      serviceAccountName: bookinfo-reviews
      terminationGracePeriodSeconds: 30
      volumes:
      - name: wlp-output
      - name: tmp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reviews
    service: reviews
  name: reviews
  namespace: bookinfo
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: reviews
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  gateways:
  - reviews-gateway
  hosts:
  - reviews-arm-demo.cx.tetrate.info
  http:
  - route:
    - destination:
        host: reviews
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: reviews-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - reviews-arm-demo.cx.tetrate.info
    port:
      name: http
      number: 80
      protocol: HTTP
